Reinstated restricted relations. Fixed bug with compounded relations - now allows duplicate dimensions.
Still to go...: partitioned source schemas, concat relations, expression columns, recursion, heaps of minor GUI tweaks/enhancements.